added lombok dependency and made required changes. Updated stay price update logic for itineraries